# docs/swagger.yaml
@@ -74,6 +74,15 @@ paths:
   /tasks:
     get:
       description: Returns all inspection tasks.
+      parameters:
+      - description: Maximum number of items to return; 0 means no limit
+        in: query
+        name: limit
+        type: integer
+      - description: Number of items to skip
+        in: query
+        name: offset
+        type: integer
       produces:
       - application/json
       responses:
@@ -83,6 +92,10 @@ paths:
             items:
               $ref: '#/definitions/task-service_service_task.Task'
             type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gorouter.ErrorResponse'
         "500":
           description: Internal Server Error
           schema:
@@ -223,6 +236,14 @@ paths:
         in: path
         name: brigadeID
         required: true
+        type: integer
+      - description: Maximum number of items to return; 0 means no limit
+        in: query
+        name: limit
+        type: integer
+      - description: Number of items to skip
+        in: query
+        name: offset
         type: integer
       produces:
       - application/json
